--- a/.env
+++ b/.env
@@ -23,6 +23,6 @@ APP_SECRET=6d7a1252e858fb7d6f3a8d2e5122ec4b
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/aquaccess?serverVersion=5.7"
+DATABASE_URL="mysql://root:Idcapt130168@127.0.0.1:3306/aquaccess?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
